# cubeb

./: .travis.yml  CMakeLists.txt
include/cubeb/: cubeb.h
src/: cubeb-internal.h  cubeb.c  cubeb_audiounit.cpp  cubeb_pulse.c  cubeb_resampler.cpp  cubeb_resampler.h
test/: test_resampler.cpp
